gateway/1.11/modules/ROOT/pages/flex-gateway-llm-proxy-request.adoc
= LLM Proxy Requests
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images

LLM Proxy supports both Open AI Responses and Chat Completions requests. To learn more about the these API types, see:

* https://developers.openai.com/api/reference/resources/responses[Responses]
* https://developers.openai.com/api/reference/resources/chat[Chat]

When sending a request to an LLM Proxy with either routing strategy, you can specify a model in the request. You don't have to modify the request for different routing strategies. Each routing strategy handles the model selection differently:

* *Model-Based Routing*: The user specifies a model in the request. If no model is specified, the LLM Proxy sends the request to the fallback route.
* *Semantic Routing*: No model is specified in the request. The LLM Proxy chooses which model to use based on the request content by matching it to prompt topics you define for each route. If a model is specified in the request, like in <<model-based-routing-example-request>>, it is ignored.

[[model-based-routing-example-request]]
== Model-Based Routing Example Request

This is an example request to the LLM Proxy using model-based routing. The request is sent to the Open AI GPT-5 nano model:

[tabs]
====
Responses::
+
[source,cli]
----
curl --location --request POST 'https://llm-proxy-gateway-iiexmc.vmizg1.usa-e1.qax.cloudhub.io/chat/completions' \
--header 'Content-Type: application/json' \
--header 'client_id: 30813d6014e84838b1b01b5144400021' \
--header 'client_secret: C1F2dCE8aA234581B121d736d7E1c41e' \
--data-raw '{
    "model": "openai/gpt-5-nano",
    "input": "What is Artificial Intelligence"
}'
----

Chat Completions::
+
[source,cli]
----

----
====

To find the configurable parameters in this request, see <<retrieve-the-request-configuration-parameters>>.

[[semantic-routing-example-request]]
== Semantic Routing Example Request

This is an example request to the LLM Proxy using semantic routing. No model is specified in the request. If a model is specified, it is ignored.

[tabs]
====
Responses::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
    "input": "Calculate simple interest"
}'
----

Chat Completions::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "messages": [
    {
      "role": "user",
      "content": "Provide a step-by-step guide for authenticating an API request."
    }
  ]
}'
----
====

To find the configurable parameters in this request, see <<retrieve-the-request-configuration-parameters>>.

[[retrieve-the-request-configuration-parameters]]
== Retrieve the Request Configuration Parameters

To find your LLM Proxy endpoint and client application credentials:

. Find your public endpoint:
.. Navigate to *Runtime Manager* > *Flex Gateways* 
.. Click the name of the Flex Gateway where your LLM Proxy is deployed.
.. Copy the *Public Endpoint*.
. Find your base path:
.. From *API Manager* > *LLM Proxies*, click the name of the LLM Proxy whose base path you want to find.
.. Click *Configuration*.
.. Copy the *Base path*.
. Retrieve your client ID and client secret:
.. From the *LLM Summary* page of your LLM Proxy, click *Actions* > *View LLM proxy in Exchange*.
.. Click *Request access*.
.. Select the *API Instance* you want to request access to.
.. Select the *Application* you want to request access to.
.. Select the *SLA tier*.
.. Click *Request access*.
.. Copy the *Client ID* and *Client Secret*.


=======================================================

== Chat Completions API Validation (/chat/completions)

=== Basic Chat Completion

Goal: Verify basic connectivity and ensure the gateway correctly routes traffic to the specified LLM provider.

Use case: A client application verifies basic connectivity and that the gateway routes traffic to the specified LLM provider (e.g., verifying a "Hello" response from Gemini 2.0).

[tabs]
====
Semantic Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/chat/completions' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "messages": [
    { "role": "developer", "content": "You are a helpful assistant" },
    { "role": "user", "content": "Hello, please introduce yourself" }
  ]
}'
----

Model-Based Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/chat/completions' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "model": "gemini/gemini-3.0-flash-preview",
  "messages": [
    { "role": "developer", "content": "You are a helpful assistant" },
    { "role": "user", "content": "Hello, please introduce yourself" }
  ]
}'
----
====

=== Creative Content Generation (Temperature Control)

Goal: Validate high-creativity responses using temperature (0 to 2).

Use case: Brainstorming tasks, such as generating multiple unique marketing slogans, where a higher temperature makes the model less deterministic and more diverse in its output.

[tabs]
====
Semantic Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/chat/completions' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "messages": [
    { "role": "user", "content": "Write a creative story about AI" }
  ],
  "temperature": 1.5
}'
----

Model-Based Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/chat/completions' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "model": "gemini/gemini-3.0-flash-preview",
  "messages": [
    { "role": "user", "content": "Write a creative story about AI" }
  ],
  "temperature": 1.5
}'
----
====

=== Multi-turn Context Management

Goal: Maintain conversation context across developer persona, user query, and assistant history.

Use case: Validates that the gateway correctly passes the "memory" of a conversation, ensuring the model knows that "it" refers to "MuleSoft" (or another referent) based on the previous message in the thread.

[tabs]
====
Semantic Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/chat/completions' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "messages": [
    { "role": "developer", "content": "You are a MuleSoft technical expert." },
    { "role": "user", "content": "What is MuleSoft?" },
    { "role": "assistant", "content": "MuleSoft is an integration platform that helps organizations connect applications, data, and devices." },
    { "role": "user", "content": "How does it help with API management?" }
  ]
}'
----

Model-Based Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/chat/completions' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "model": "gemini/gemini-3.0-flash-preview",
  "messages": [
    { "role": "developer", "content": "You are a MuleSoft technical expert." },
    { "role": "user", "content": "What is MuleSoft?" },
    { "role": "assistant", "content": "MuleSoft is an integration platform that helps organizations connect applications, data, and devices." },
    { "role": "user", "content": "How does it help with API management?" }
  ]
}'
----
====

=== Structured Data Validation (JSON Format)

Goal: Extract patterns into structured JSON using `top_p` and `max_completion_tokens`.

Use case: A MuleSoft flow programmatically consumes the LLM output (e.g., transforming a messy support transcript into a clean JSON object for insertion into a database).

[tabs]
====
Semantic Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/chat/completions' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "messages": [
    { "role": "user", "content": "Explain MuleSoft Integration patterns in JSON format" }
  ],
  "max_completion_tokens": 50000,
  "top_p": 0.9
}'
----

Model-Based Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/chat/completions' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "model": "gemini/gemini-3.0-flash-preview",
  "messages": [
    { "role": "user", "content": "Explain MuleSoft Integration patterns in JSON format" }
  ],
  "max_completion_tokens": 50000,
  "top_p": 0.9
}'
----
====

=== Enterprise Strategy Testing

Goal: Validate architecture-level design with high token limits and specific temperatures.

Use case: Validates the gateway's ability to handle large-payload "Expert" prompts, such as asking an AI Solution Architect to design a migration strategy from legacy SAP systems to Salesforce.

[tabs]
====
Semantic Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/chat/completions' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "messages": [
    { "role": "developer", "content": "You are a MuleSoft solution architect helping with enterprise integrations." },
    { "role": "user", "content": "Design a data integration strategy for a Fortune 500 company migrating from legacy systems to Salesforce using MuleSoft Anypoint Platform. Include API-led connectivity approach." }
  ],
  "temperature": 0.7,
  "max_completion_tokens": 10000
}'
----

Model-Based Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/chat/completions' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "model": "gemini/gemini-3.0-flash-preview",
  "messages": [
    { "role": "developer", "content": "You are a MuleSoft solution architect helping with enterprise integrations." },
    { "role": "user", "content": "Design a data integration strategy for a Fortune 500 company migrating from legacy systems to Salesforce using MuleSoft Anypoint Platform. Include API-led connectivity approach." }
  ],
  "temperature": 0.7,
  "max_completion_tokens": 10000
}'
----
====

=== Streaming API Call

Goal: Validate real-time, non-buffered token delivery using the `--no-buffer` flag.

Use case: User-facing chatbot UIs where the text must appear word-by-word as it is generated, rather than waiting for the entire response to finish.

[tabs]
====
Semantic Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/chat/completions' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "messages": [
    { "role": "user", "content": "Explain step-by-step MuleSoft integration process" }
  ],
  "stream": true
}' \
--no-buffer
----

Model-Based Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/chat/completions' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "model": "gemini/gemini-3.0-flash-preview",
  "messages": [
    { "role": "user", "content": "Explain step-by-step MuleSoft integration process" }
  ],
  "stream": true
}' \
--no-buffer
----
====

=== Tool Calling: Initial Request with Tool Definition

Goal: Allow the model to request real-time information from the application by invoking a function.

Use case: When a user asks for the current time in San Francisco, the model recognizes it cannot answer from memory and instead requests to invoke a `get_current_time` function from your local API.

[tabs]
====
Semantic Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/chat/completions' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "tool_choice": "auto",
  "messages": [
    { "role": "user", "content": "What is the time in San Francisco?" }
  ],
  "tools": [
    {
      "type": "function",
      "function": {
        "name": "get_current_time",
        "description": "When user asks for time tell me to invoke this Tool",
        "parameters": {
          "type": "object",
          "properties": {
            "timezone": { "type": "string", "description": "Timezone of the user asked location" }
          },
          "required": ["timezone"]
        }
      }
    }
  ]
}'
----

Model-Based Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/chat/completions' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "model": "openai/gpt-5.2",
  "tool_choice": "auto",
  "messages": [
    { "role": "user", "content": "What is the time in San Francisco?" }
  ],
  "tools": [
    {
      "type": "function",
      "function": {
        "name": "get_current_time",
        "description": "When user asks for time tell me to invoke this Tool",
        "parameters": {
          "type": "object",
          "properties": {
            "timezone": { "type": "string", "description": "Timezone of the user asked location" }
          },
          "required": ["timezone"]
        }
      }
    }
  ]
}'
----
====

=== Tool Calling: Request with Tool Execution Response

Goal: Send the executed tool output back to the gateway to generate a final answer.

Use case: The client provides the executed tool output (e.g., the current time) back to the gateway so the model can generate a natural-language response for the user.

[tabs]
====
Semantic Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/chat/completions' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "tool_choice": "auto",
  "messages": [
    { "role": "user", "content": "What is the time in San Francisco?" },
    {
      "role": "assistant",
      "content": null,
      "tool_calls": [
        {
          "id": "call_KDrTKkRTGfylhkAO4A8s0pAO",
          "type": "function",
          "function": {
            "name": "get_current_time",
            "arguments": "{\"timezone\":\"America/Los_Angeles\"}"
          }
        }
      ]
    },
    {
      "role": "tool",
      "tool_call_id": "call_KDrTKkRTGfylhkAO4A8s0pAO",
      "content": "2026-02-20T05:02:05.873534-08:00"
    }
  ],
  "tools": [
    {
      "type": "function",
      "function": {
        "name": "get_current_time",
        "parameters": {
          "type": "object",
          "properties": { "timezone": { "type": "string" } },
          "required": ["timezone"]
        }
      }
    }
  ]
}'
----

Model-Based Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/chat/completions' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "model": "openai/gpt-5.2",
  "tool_choice": "auto",
  "messages": [
    { "role": "user", "content": "What is the time in San Francisco?" },
    {
      "role": "assistant",
      "content": null,
      "tool_calls": [
        {
          "id": "call_KDrTKkRTGfylhkAO4A8s0pAO",
          "type": "function",
          "function": {
            "name": "get_current_time",
            "arguments": "{\"timezone\":\"America/Los_Angeles\"}"
          }
        }
      ]
    },
    {
      "role": "tool",
      "tool_call_id": "call_KDrTKkRTGfylhkAO4A8s0pAO",
      "content": "2026-02-20T05:02:05.873534-08:00"
    }
  ],
  "tools": [
    {
      "type": "function",
      "function": {
        "name": "get_current_time",
        "parameters": {
          "type": "object",
          "properties": { "timezone": { "type": "string" } },
          "required": ["timezone"]
        }
      }
    }
  ]
}'
----
====

=== Structured Output Validation (JSON Schema)

Goal: Validate entity extraction into a strictly defined JSON Schema (e.g., CalendarEvent).

Use case: When a user provides unstructured event details in plain text, the LLM consistently returns a formatted JSON object that adheres to the required schema, preventing integration or parsing errors in downstream applications.

[tabs]
====
Semantic Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/chat/completions' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "messages": [
    { "role": "system", "content": "Extract the event information." },
    { "role": "user", "content": "Madhu Dileep and Santosh A are going to a AI Summit on 19th Feb 2026." }
  ],
  "response_format": {
    "type": "json_schema",
    "json_schema": {
      "name": "CalendarEvent",
      "schema": {
        "type": "object",
        "properties": {
          "name": { "type": "string", "description": "Name of the event" },
          "date": { "type": "string", "description": "Date of the event, in MM-DD-YYYY format" },
          "participants": { "type": "array", "items": { "type": "string" } }
        },
        "required": ["name", "date", "participants"]
      }
    }
  }
}'
----

Model-Based Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/chat/completions' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "model": "gemini/gemini-3-flash-preview",
  "messages": [
    { "role": "system", "content": "Extract the event information." },
    { "role": "user", "content": "Madhu Dileep and Santosh A are going to a AI Summit on 19th Feb 2026." }
  ],
  "response_format": {
    "type": "json_schema",
    "json_schema": {
      "name": "CalendarEvent",
      "schema": {
        "type": "object",
        "properties": {
          "name": { "type": "string", "description": "Name of the event" },
          "date": { "type": "string", "description": "Date of the event, in MM-DD-YYYY format" },
          "participants": { "type": "array", "items": { "type": "string" } }
        },
        "required": ["name", "date", "participants"]
      }
    }
  }
}'
----
====

== Responses API Validation (/responses)

=== Responses Endpoint for MCP (Model Context Protocol)

Goal: Integrate the gateway with an external MCP server for automated action execution.

Use case: An AI agent performs complex actions, such as searching a specific internal Knowledge Base or updating a Jira ticket, using standardized tools defined on a remote MCP server.

[tabs]
====
Semantic Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/responses' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "input": [
    { "role": "system", "content": "You are helpful Service Agent" },
    { "role": "user", "content": "My Laptop screen is broken" }
  ],
  "tools": [
    {
      "type": "mcp",
      "server_label": "service_mcp",
      "require_approval": "never",
      "server_description": "Server enabled to do Service related actions",
      "server_url": "https://ask-service-mcp-dvaz3u.c87dy0.usa-e2.cloudhub.io/mcp"
    }
  ]
}'
----

Model-Based Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/responses' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "model": "openai/gpt-5.2",
  "input": [
    { "role": "system", "content": "You are helpful Service Agent" },
    { "role": "user", "content": "My Laptop screen is broken" }
  ],
  "tools": [
    {
      "type": "mcp",
      "server_label": "service_mcp",
      "require_approval": "never",
      "server_description": "Server enabled to do Service related actions",
      "server_url": "https://ask-service-mcp-dvaz3u.c87dy0.usa-e2.cloudhub.io/mcp"
    }
  ]
}'
----
====

=== Stateful Response Persistence

Goal: Validate persistent memory by chaining two requests using `previous_response_id`. Only OpenAI GPT models support the `store` setting.

Use case: Removes the need for the client to send the entire previous chat history on every turn, reducing bandwidth and improving security by keeping the context on the gateway.

Request A: Initial stored call


[tabs]
====
Semantic Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/responses' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "instructions": "You are helpful Service Knowledge Agent",
  "input": [ { "role": "user", "content": "My Laptop screen is broken" } ],
  "store": true
}'
----

Model-Based Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/responses' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "model": "openai/gpt-5.2",
  "instructions": "You are helpful Service Knowledge Agent",
  "input": [ { "role": "user", "content": "My Laptop screen is broken" } ],
  "store": true
}'
----

====

Request B: Follow-up using `previous_response_id` from the first response

[tabs]
====
Semantic Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/responses' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "instructions": "You are helpful Service Agent",
  "previous_response_id": "<response-id-from-request-a>",
  "input": [ { "role": "user", "content": "Thank you!" } ],
  "store": true
}'
----

Model-Based Routing::
+
[source,cli]
----
curl --location '<public-endpoint>/<base-path>/responses' \
--header 'Content-Type: application/json' \
--header 'client_id: <client-id>' \
--header 'client_secret: <client-secret>' \
--data '{
  "model": "openai/gpt-5.2",
  "instructions": "You are helpful Service Agent",
  "previous_response_id": "<response-id-from-request-a>",
  "input": [ { "role": "user", "content": "Thank you!" } ],
  "store": true
}'
----
====